--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.0.1",
-    "jest": "^29.0.3",
-    "ts-jest": "^29.0.0",
-    "typescript": "^4.8.3"
+    "@types/jest": "30.0.0",
+    "jest": "30.2.0",
+    "ts-jest": "29.4.5",
+    "typescript": "5.9.3"
   }
 }
