--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
     "compilerOptions": {
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "module": "nodenext",
+        "target": "esnext",
+        "moduleResolution": "nodenext"
     }
 }
