--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pnpm exec tsx --env-file=.env ./src/index.ts",
+    "start": "tsx --env-file=.env ./src/index.ts",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -14,6 +14,7 @@
     "@types/jest": "30.0.0",
     "jest": "30.2.0",
     "ts-jest": "29.4.6",
+    "tsx": "4.19.2",
     "typescript": "5.9.3"
   }
 }
