--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsx --env-file=.env ./src/index.ts",
+    "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch"
   },
