--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "target": "esnext",
         "moduleResolution": "nodenext",
         "strict": true,
+        "isolatedModules": true,
         "outDir": "./dist",
         "rootDir": "./src"
     },
