--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "30.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.49.0",
-    "@typescript-eslint/parser": "^8.49.0",
-    "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
+    "@typescript-eslint/eslint-plugin": "8.49.0",
+    "@typescript-eslint/parser": "8.49.0",
+    "eslint": "9.39.1",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.4",
     "jest": "30.2.0",
-    "prettier": "^3.7.4",
+    "prettier": "3.7.4",
     "ts-jest": "29.4.6",
     "tsx": "4.19.2",
     "typescript": "5.9.3"
